package design.patten.flyweight;

/**
 * desc : 享元接口
 * Created by tiantian on 2018/10/16
 */
public interface FlyWeight {
    void option();

    String getIntrinsicState();
}
